SC-829 : Updated docker file