@@ -1,21 +1,15 @@
 FROM java:jre-alpine
+  
+LABEL Maintainer="Moti Zilberman <motiz88@gmail.com>"
 
-MAINTAINER Moti Zilberman <motiz88@gmail.com>
+COPY /stanford-corenlp-full-2018-10-05 /stanford-corenlp-full-2018-10-05
 
-RUN apk add --update --no-cache \
-	 unzip \
-	 wget
-
-RUN wget http://nlp.stanford.edu/software/stanford-corenlp-full-2018-02-27.zip
-RUN unzip stanford-corenlp-full-2018-02-27.zip && \
-	rm stanford-corenlp-full-2018-02-27.zip
-
-WORKDIR stanford-corenlp-full-2018-02-27
+WORKDIR stanford-corenlp-full-2018-10-05
 
 RUN export CLASSPATH="`find . -name '*.jar'`"
 
-ENV PORT 8050 
+ENV PORT 9000
 
-EXPOSE $PORT
+EXPOSE 9000
 
-CMD java -Xmx4g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer --add-modules java.se.ee -username corenlp -password P@$$w0rid -timeout 15000
+CMD java -mx8g -cp "*" edu.stanford.nlp.pipeline.StanfordCoreNLPServer -annotators 'tokenize,ssplit,pos,lemma,ner,regexner' -port 9000 -username corenlp -password DatasiteOne -timeout 315000 -regexner.mapping -quite
